# kotlin-airplay-receiver

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  gradle.properties
.github/workflows/: android.yml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_raop_server.cpp
app/src/main/cpp/lib/: CMakeLists.txt  http_response.c  http_response.h  raop.c  raop.h  raop_audio.h  raop_buffer.c  raop_buffer.h  raop_handlers.h  raop_rtp.c  raop_rtp.h  raop_rtp_mirror.c
app/src/main/cpp/lib/alac/: ALACAudioTypes.h  ALACBitUtilities.c  ALACBitUtilities.h  ALACDecoder.cpp  ALACDecoder.h  EndianPortable.c  ag_dec.c  alac_decoder_wrapper.cpp  alac_decoder_wrapper.h  dp_dec.c
app/src/main/cpp/lib/fdk-aac/: CMakeLists.txt
app/src/main/cpp/mDNSResponder/: CMakeLists.txt
app/src/main/kotlin/io/carmo/airplay/receiver/: AirPlayMetadata.kt  AirPlayMetadataParser.kt  AirPlayServer.kt  AppVisualTheme.kt  (+24 more)
app/src/main/res/drawable/: banner.xml  idle_art_aurora.xml  idle_art_copper.xml  idle_art_emerald.xml  idle_art_magma.xml  idle_art_pacific.xml  permission_background.xml  settings_row_background.xml  startup_panel_background.xml  startup_version_background.xml  stream_info_background.xml  waiting_overlay_background.xml
app/src/main/res/layout/: activity_diagnostics.xml  activity_main.xml  activity_settings.xml  settings_list_item.xml  settings_section_item.xml
app/src/main/res/values/: strings.xml  styles.xml
docs/: architecture.md  performance.md  vendor-audit.md
scripts/: adb-tv-reconnect.sh
(+15 files in other folders)
